# pitag_ros2

./: .gitignore  HUONG_DAN_CALIBRATION.md  HUONG_DAN_COB_FIDUCIALS.md  HUONG_DAN_EVALUATE.md  HUONG_DAN_GEN_PITAG.md
src/PiTag-generator/: gen_checkerboard.py  pitag_by_id.py
src/cob_fiducials/: CMakeLists.txt  package.xml
src/cob_fiducials/common/files/models/: fpiTagIni_0.xml  piTagIni_0.xml  piTagIni_0_143mm.xml  piTagIni_0_15cm.xml  piTagIni_0_20cm.xml  piTagIni_3.xml
src/cob_fiducials/common/include/cob_fiducials/: FiducialDefines.h
src/cob_fiducials/common/include/cob_fiducials/aruco/: arucofidmarkers.h  board.h  boarddetector.h  cameraparameters.h  marker.h  markerdetector.h
src/cob_fiducials/common/src/: AbstractFiducialModel.cpp
src/cob_fiducials/common/src/aruco/: arucofidmarkers.cpp  board.cpp  boarddetector.cpp  cameraparameters.cpp  cvdrawingutils.cpp  marker.cpp  markerdetector.cpp
src/cob_fiducials/common/src/pi/: FiducialModelPi.cpp
src/cob_fiducials/ros/launch/: fiducials.launch.py  usb_cam.launch.py
src/cob_fiducials/ros/scripts/: evaluate_accuracy.py
src/cob_fiducials/ros/src/: fiducials.cpp  yuyv_to_mono8.py
src/cob_object_detection_msgs/: CMakeLists.txt  package.xml
src/cob_object_detection_msgs/msg/: Mask.msg  PoseRT.msg
src/cob_vision_utils/: CMakeLists.txt  package.xml
src/cob_vision_utils/common/include/cob_vision_utils/: StdAfx.h
