<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cob_fiducials</name>
  <version>0.2.0</version>
  <description>
    Fiducial recognition for ROS2 Humble. Detects PI-Tag and ArUco markers from a single RGB camera.
  </description>

  <maintainer email="roboticsvn.ai@gmail.com">neo</maintainer>
  <license>LGPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cob_object_detection_msgs</depend>
  <depend>cob_vision_utils</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>libopencv-dev</depend>
  <depend>libtinyxml-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
