<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cob_vision_utils</name>
  <version>0.2.0</version>
  <description>Vision utility functions for Care-O-Bot (ROS2 port)</description>

  <maintainer email="roboticsvn.ai@gmail.com">neo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>libopencv-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
